--- a/java/mybatis-startup/src/main/resources/datasource.properties
+++ b/java/mybatis-startup/src/main/resources/datasource.properties
@@ -1,7 +1,6 @@
-db.driverLocation=D:\\MyApps\\H2\\bin\\h2-1.4.193.jar
-db.driverClassName=org.h2.Driver
-#db.url=jdbc:mysql://192.1.1.1:3306/mmall?characterEncoding=utf-8
-db.url=jdbc:h2:tcp://localhost/~/mmall;DB_CLOSE_ON_EXIT=FALSE
-db.username=sa
-db.password=
+db.driverLocation=C:\\repository\\mysql\\mysql-connector-java\\5.1.46\\mysql-connector-java-5.1.46.jar
+db.driverClassName=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://192.168.3.78:3306/mydb
+db.username=root
+db.password=root
 
