--- a/java/mybatis-startup/src/main/resources/application-dev.yml
+++ b/java/mybatis-startup/src/main/resources/application-dev.yml
@@ -1,18 +1,18 @@
 spring:
-  application:
-    name: UserCredits-Service
+#  application:
+#    name: UserCredits-Service
   datasource:
-    platform: h2
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/mmall;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
-  h2:
-    console:
-      enabled: false
+    platform: mysql
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.3.78:3306/mydb
+    username: root
+    password: root
+#  h2:
+#    console:
+#      enabled: false
 #  jpa:
 #    hibernate:
 #      ddl-auto: update
-mybatis:
-  mapper-locations: classpath*:mappers/*.xml
+#mybatis:
+#  mapper-locations: classpath*:mappers/*.xml
 #    show-sql: true
