clean befor test MBG for common mapper

--- a/java/mybatis-startup/src/main/resources/datasource.properties
+++ b/java/mybatis-startup/src/main/resources/datasource.properties
@@ -1,6 +1,8 @@
-db.driverLocation=C:\\repository\\mysql\\mysql-connector-java\\5.1.46\\mysql-connector-java-5.1.46.jar
+db.driverLocation=C:\\Users\\yang.yangjie\\.m2\repository\\mysql\\mysql-connector-java\5.1.46\\mysql-connector-java-5.1.46.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://192.168.3.78:3306/mydb
+db.url=jdbc:mysql://127.0.0.1:3306/mydb
 db.username=root
 db.password=root
+
+
 
